# zwoasi

./: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: check.py  fits.py  main.py  trigger.py
sdk/137/lib/mac/: libASICamera2.dylib
src/zwo/: __init__.py  camera.py  lib.py
src/zwoasi/: __init__.py  camera.py  capabilities.py  enums.py  errors.py  gps.py  info.py  lib.py  mode.py  time.py  utils.py  version.py
test/: __init__.py  test_base.py  test_camera.py  test_capabilities.py  test_enums.py  test_errors.py  test_gps.py  test_info.py  test_lib.py  test_mode.py  test_time.py  test_utils.py
