[project]
name = "zwoasi"
version = "0.0.0"
description = "Modern python bindings for ZWO ASI astronomical cameras"
authors = [{ name = "Michael Roberts", email = "michael@observerly.com" }]
maintainers = [{ name = "Michael Roberts", email = "michael@observerly.com" }]
keywords = ["astrophotography", "zwoasi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = []

[project.urls]
"Source" = "https://github.com/michealroberts/zwoasi"
"Issues" = "https://github.com/michealroberts/zwoasi/issues"

[project.scripts]
zwoasi = "zwoasi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.7",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_default_fixture_loop_scope = ["session"]

[tool.hatch.build.targets.wheel]
packages = ["src/zwoasi"]
